# logic_sim

./: .gitignore  CMakeLists.txt  Makefile  logic.txt  main.c  main.h  output.c  output.h  output.txt  read_input.c  read_input.h  read_logic.c  read_logic.h  sim.c  sim.h
tests/2/: _output.txt  input.txt  logic.txt
tests/3/: _output.txt
tests/4/: _output.txt  input.txt  logic.txt
tests/s27/: _output.txt  input.txt  logic.txt
